--- a/Tayseer/مخارج الحروف.md
+++ b/Tayseer/مخارج الحروف.md
@@ -45,7 +45,7 @@
 5. الخيشوم
 
 #### 1. الجوف
-> فألف الجوف وأختاها وهي    حروف مد للهواء تنتهي
+> للجوف ألف وأختاها وهي    حروف مد للهواء تنتهي
 
 يخرج منه حروف المد الثلاثة من مخرج فرعي واحد
 
