--- a/Tayseer/صفات الحروف.md
+++ b/Tayseer/صفات الحروف.md
@@ -54,5 +54,45 @@
 ومستحق كل حرف أن يتم نطقه ويجري الصوت أو يحبس حسب صفتها هذه، ويكون زمن نطق الحرف الرخو أطول من المتوسط وهو أطول من الشديد
 
 `كيف يكون حبس الهواء عند النطق بالزاي أو الذال وهي مجهورة رخوة؟`
+### الاستعلاء والاستفال
+حروف الاستعلاء مفخمة وهي __خص ضغط قظ__ وباقي الحروف مستفلة مرققة
+ويشذ عن ذلك الراء المفخمة ولام اسم الجلالة والألف بعد حرف استعلاء
+### الإطباق والانفتاح
+الحروف المطبقة يضيق فيها المخرج حتى ينطبق اللسان على الحنك وهي __ص ض ط ظ__ وكلها مستعلية
+والمنفتح من حروف الاستعلاء __ق غ خ__
+
+### الإذلاق والإصمات
+والإذلاق سرعة النطق بالحرف وسهولة جريه، وحروفه __فر من لب__
+أهمل الشاطبي ذكر هاتين الصفتين لما لم يكن لهما أثر على التجويد
+`ذكر عبد الحميد بأن يملي عليك ما أملاه عليه شيخه`
+
+## الصفات غير المتضادة
+### الصفير
+هو المعروف
+__ز ص س__
+
+### القلقلة
+تباعد المخرجين لسماع صوت الحرف الشديد المجهور
+**قطب جد**
+
+### اللين
+السهولة في النطق
+**الواو والياء اللينتان**
+
+### التفشي
+الانتشار
+**ش**
+
+### الاستطالة
+`أعانني الله على النطق بها`
+استطالة اللسان واندفاعه إلى حافة الثنايا عند النطق بالضاد
+**ض**
+
+### الانحراف
+**ل ر**
+
+### التكرار
+`أعانني لله على تركها`
+**ر**
 
 
