--- a/Tayseer/صفات الحروف.md
+++ b/Tayseer/صفات الحروف.md
@@ -89,7 +89,9 @@ __ز ص س__
 **ض**
 
 ### الانحراف
-**ل ر**
+مرور الصوت وانحرافه عن مخرجه**ل ر**
+
+هو في الراء الفرجة فوق اللسان لتكرارها، وفي اللام انحرافها عن الشدة نحو اللين إلى التوسط
 
 ### التكرار
 `أعانني لله على تركها`
